kubernetes/apps/base/business-system/magento-makergroup/auntalma/httproute-admin.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auntalma-admin
  namespace: business-system
spec:
  parentRefs:
    - name: envoy-external
      namespace: network-system
      sectionName: https
  hostnames:
    - "auntalma.haydenagencies.com.au"
    - "www.auntalma.com.au"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /almaadmin/
      backendRefs:
        - name: auntalma
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2/
      backendRefs:
        - name: oauth2-proxy
          namespace: network-system
          port: 80
