kubernetes/apps/base/business-system/magento-makergroup/auntalma/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auntalma
  namespace: business-system
  annotations:
    external-dns.alpha.kubernetes.io/external: "true"
    external-dns.alpha.kubernetes.io/target: external.haydenagencies.com.au
spec:
  parentRefs:
    - name: envoy-external
      namespace: network-system
      sectionName: https
  hostnames:
    - "auntalma.haydenagencies.com.au"
    - "auntalma.com.au"
    - "www.auntalma.com.au"
    - "dropdrape.com.au"
    - "www.dropdrape.com.au"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: auntalma
          port: 8080
